thêm handler "trả phòng" vào cuối room_handler.go
